feat: post product

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 MONGO_URI = PEGAR NO MONGODB ATLAS (depois de mongodb.net/ adicionar o nome do banco)
 JWT_SECRET = GERAR COM HASH MD5
+EMAIL_ADMIN = email que terá acesso a área ADMIN para adicionar os produtos
