--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "projeto15-yes_repeat-back",
   "version": "1.0.0",
+  "type": "module",
   "description": "Este é o back-end de um projeto Full Stack em dupla, para treinar habilidades como trabalho em equipe. Um projeto com requisitos abertos, onde devemos criar um e-commerce com funcionalidades de: login; cadastro; listagem de produtos; carrinho e checkout. Decidimos criar o site do - Yes, repeat! - um brechó online no instagram.",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -21,13 +21,17 @@
   },
   "homepage": "https://github.com/Matheussvini/projeto15-yes_repeat-back#readme",
   "dependencies": {
+    "aws-sdk": "^2.390.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "joi": "^17.7.0",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.12.0",
+    "mongodb": "^4.12.1",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^2.9.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
